[package]
name = "vea"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chumsky = {version="1.0.0-alpha.0",features=["std", "spill-stack", "label"]}
ariadne = { version = "*", features = ["auto-color"] }
logos = "0.13.0"
dbg-pls = { version = "0.3.5", features = ["pretty", "colors", "derive"] }
